--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-    html, body {
+html, body {
         height: 100%;
         margin: 0;
         display: flex;
@@ -92,4 +92,11 @@
         padding: 0 40px 0 40px;
         margin: 5px 0;
 
+    }
+
+    @media only screen and (max-width: 600px) {
+        .sidebar {
+            display: none;
+        }
+    
     }
