--- a/style.css
+++ b/style.css
@@ -49,6 +49,18 @@ html, body {
         margin: 15px 0 15px 0;
     }
 
+    button {
+        background-color: #4CAF50; /* Yeşil arkaplan rengi */
+        border: none; /* Kenarlık yok */
+        color: white; /* Yazı rengi beyaz */
+        text-align: center; /* Yazıyı ortala */
+        text-decoration: none; /* Metin altı çizgisi yok */
+        display: inline-block; /* Satır içi blok */
+        font-size: 16px; /* Yazı boyutu */
+        cursor: pointer; /* İmleci el simgesi yap */
+        border-radius: 10px; /* Kenar yuvarlama */
+    }
+
     #button1 {
         width: 100px;
         height: 40px;
